--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Joe Lepper",
   "license": "MIT",
   "dependencies": {
+    "cookie-parser": "1.3.5",
     "needle": "~0.6.3",
     "request": "~2.33.0",
     "querystring": "~0.2.0",
